--- a/index.css
+++ b/index.css
@@ -98,6 +98,18 @@ h1 img {
   box-shadow: none;
   transform: scale(0.95);
 }
+.instrument-container p {
+  font-size: 1.2rem;
+  color: black;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.9);
+  background-color: white;
+  padding: 3px;
+  border-radius: 5px;
+}
+span {
+  color: tomato;
+  font-style: italic;
+}
 #crash {
   background: url(./images/crash.jpg);
   background-size: contain;
