--- a/index.css
+++ b/index.css
@@ -128,6 +128,12 @@ span {
   background-size: contain;
 }
 
+.active {
+  opacity: 0.9;
+  box-shadow: none;
+  transform: scale(0.95);
+}
+
 @media screen and (max-width: 850px) {
   #container {
     grid-template-columns: repeat(2, 1fr);
